# IntelliServe

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_mvp.py
backend/api/: cli.py  main.py
backend/api/common/: embedding.py  llm_client.py  qdrant_client.py
backend/api/common/prompts/: __init__.py  intent_classify_v1.txt  rag_qa_v1.txt
backend/api/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/api/modules/auth/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/api/modules/chatbot/: __init__.py  card_templates.py  dingtalk_adapter.py  im_adapter.py  intent_router.py  message_formatter.py  models.py  routes.py  schemas.py  service.py
backend/api/modules/knowledge/: __init__.py  models.py  routes.py  schemas.py  seed.py  service.py  tasks.py
backend/worker/: celery_app.py  kb_tasks.py
doc/: DOC-22-功能设计文档.md  DOC-23-页面设计文档.md  DOC-33-资产成本与盘活设计.md  DOC-34-报表分析与AI报表生成设计.md  DOC-35-AI资产管家与企业AI网关设计.md  README.md  all_docs.json
doc/api/: DOC-05-REST-API规范.md  DOC-06-Webhook与回调规范.md  DOC-07-Agent服务器通信协议.md  DOC-24-钉钉集成详细设计.md
doc/architecture/: DOC-00-解决方案概述.md  (+11 more)
docker/: docker-compose.yml
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
scripts/: build_docs.py  download-models.sh
website/: doc-viewer.html  docs.html  features.html  index.html  roadmap.html  system-gate.html  system.html
(+41 files in other folders)
